--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* ========= GLOBAL ========= */
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
@@ -10,7 +9,6 @@ body {
     overflow-x: hidden;
 }
 
-/* === FULL HEADER === */
 header {
     background: #161b22;
     padding: 14px 20px 8px;
@@ -18,12 +16,10 @@ header {
     border-bottom: 1px solid #2f363d;
 }
 
-/* Hide actual checkbox */
 .toggle-tabs-checkbox {
     display: none;
 }
 
-/* Toggle Button Style — only mobile */
 .toggle-tabs-button {
     display: none;
 }
@@ -119,21 +115,70 @@ body {
     font-weight: 600;
 }
 
-.note-box {
-    background-color: #1e242c;
-    color: #ccc;
-    padding: 12px 16px;
-    border-radius: 8px;
-    border: 1px solid #30363d;
-    margin-bottom: 15px;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
+
+
+
+.discord-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
 
-.note-box .highlight-text {
-    color: #58a6ff;
+.discord-box {
+    padding: 25px 30px;
+    border-radius: 20px;
+    text-align: center;
+    max-width: 420px;
+    width: 100%;
 }
+
+.discord-title {
+    color: #ffffff;
+    font-size: 26px;
+    margin-top: -40px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.discord-subtext {
+    color: #aaa;
+    font-size: 15px;
+    margin-top: -20px;
+}
+
+.discord-logo-container {
+    margin: 0 auto;
+}
+
+.discord-logo-link {
+    display: inline-block;
+    background: #161b22;
+    border-radius: 16px;
+    border: 1px solid #30363d;
+    padding: 10px;
+    height: 80px;
+    margin-top: -5px;
+
+}
+
+
+.discord-logo {
+    height: 180px;
+    display: block;
+    margin: 0 auto;
+    margin-top: -47px;
+}
+
+.discord-join-note {
+    color: #ccc;
+    font-size: 14px;
+    margin-top: 0px;
+    font-style: italic;
+}
+
+
+
 
 
 /* ========= LAYOUT ========= */
@@ -151,7 +196,7 @@ body {
     display: flex;
     padding: 20px;
     border: 1px solid #30363d;
-    margin-top: -35px;
+    margin-top: -58px;
 }
 
 /* ========= MAIN CONTENT ========= */
